--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a href="teste.html">Teste</a>
     <div style="display: flex;">
         <div style="display: flex; width: 300px; height: 100px; justify-content: space-between; flex-direction: column;">
             <input id="login" placeholder="Login" onchange="preencherLogin(event)">
